--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "preview": "vite preview"
   },
   "info": {
-    "githubURL": "IWEB-UPM/P1_el_tiempo",
+    "githubURL": "REACT-UPM/P1_eltiempo_2024",
     "serverUrl": "https://aat.dit.upm.es/",
     "courseId": "396",
     "assignmentId": "8515"
